# rust-runtime-benchmarks

./: .gitignore  bench.toml  getrusage-benchmarks.json  rust-runtime-20150901-20160211.ipynb  rust-runtime-cargobench-vs-getrusage.ipynb
bench-suite-linux/: Cargo.toml  run_nightlies.py
bench-suite-linux/src/: bencher.rs  cbor_bench.rs  crc_bench.rs  csv_bench.csv  csv_bench.rs  hyper_bench.rs  itertools_bench.rs  main.rs  memchr_bench.rs  ndarray_bench.rs  optional_bench.rs  permutohedron_bench.rs  rand_bench.rs  regex_bench.rs  simd_bench.rs  suffix_bench.rs  uuid_bench.rs
