[package]
name = "bench-suite-linux"
version = "0.1.0"
authors = ["Adam Perry <adam.n.perry@gmail.com>"]

[dependencies]
nix = "0.4.2"
lazy_static = "0.1.15"
libc = "0.2.7"
num = "0.1.31"
rustc-serialize = "0.3"
serde_json = "0.6.0"

# benchmark dependencies:
cbor = "0.3.16"
crc = "1.2.0"
csv = "0.14.3"
itertools = "0.4.8"
memchr = "0.1.10"
optional = "0.0.12"
permutohedron = "0.2.1"
rand = "0.3.14"
regex = "0.1.52"
regex-syntax = "0.2.3"
suffix = "0.3.1"
uuid = "0.1.18"

[profile.release]
debug = true
